# Cpp_Project

./: .gitignore  CMakeLists.txt  README.md  _c_text_to_c_p_p_8cpp.html  _c_text_to_c_p_p_8cpp__incl.dot  _c_text_to_c_p_p_8h.html  _c_text_to_c_p_p_8h.js  _c_text_to_c_p_p_8h__dep__incl.dot  _c_text_to_c_p_p_8h__incl.dot  _c_text_to_c_p_p_8h_source.html  _c_text_to_esc_seq_8cpp.html  _c_text_to_esc_seq_8cpp__incl.dot  _c_text_to_esc_seq_8h.html  _c_text_to_esc_seq_8h.js  _c_text_to_esc_seq_8h__dep__incl.dot  _c_text_to_esc_seq_8h__incl.dot  _c_text_to_esc_seq_8h_source.html  _c_text_to_hex_seq_8cpp.html  _c_text_to_hex_seq_8cpp__incl.dot  _c_text_to_hex_seq_8h.html  _c_text_to_hex_seq_8h.js  _c_text_to_hex_seq_8h__dep__incl.dot  _c_text_to_hex_seq_8h__incl.dot  _c_text_to_hex_seq_8h_source.html  _c_text_to_oct_seq_8cpp.html  _c_text_to_oct_seq_8cpp__incl.dot  _c_text_to_oct_seq_8h.html  _c_text_to_oct_seq_8h.js  _c_text_to_oct_seq_8h__dep__incl.dot  _c_text_to_oct_seq_8h__incl.dot  _c_text_to_oct_seq_8h_source.html  _c_text_to_raw_hex_seq_8cpp.html  _c_text_to_raw_hex_seq_8cpp__incl.dot  _c_text_to_raw_hex_seq_8h.html  _c_text_to_raw_hex_seq_8h.js  _c_text_to_raw_hex_seq_8h__dep__incl.dot  _c_text_to_raw_hex_seq_8h__incl.dot  _c_text_to_raw_hex_seq_8h_source.html  _console_colors_8cpp.html  _console_colors_8cpp.js  (+115 more)
.examples/: sample.cpp  sample.h  sample.txt
.examples/magic_enum/include/: readme.txt
.examples/tokenizer/: tokenizer.cpp
.examples/unittest/boost_test/: unittest.cpp
.examples/unittest/catch2/: main.cpp  unittest.cpp
.examples/zahlen_wandeln/: wandeln.bat  wandeln.cpp
.github/workflows/: jekyll-gh-pages.yml  static.yml
.vscode example/: c_cpp_properties.json  c_pp_properties.json  settings.json  tasks.json
Codebeispiele/: sample.cpp
Codebeispiele/Codebeispiele/magic_enum/: main.cpp
Codebeispiele/Codebeispiele/zahlen_wandeln/: wandeln.cpp
Codebeispiele/format/: format.cpp
Codebeispiele/getopt/: getopt.c
Codebeispiele/tokenizer/: tokenizer.cpp
Codebeispiele/zahlen_wandeln/: wandeln.bat
Cpp/: main.bat  main.cpp
Unittests/: TEST.cpp
doc/: Doxyfile  doxygen_open.bat  doxygenscript.bat  icon.psd
doc/Sicherung/: Absicherung Fragen.md
doc/custom_templates/: header.html
doc/doc_website/html/: _c_text_to_c_p_p_8cpp.html  _c_text_to_c_p_p_8cpp__incl.dot  _c_text_to_c_p_p_8h.html  _c_text_to_c_p_p_8h.js  _c_text_to_c_p_p_8h__incl.dot  _c_text_to_c_p_p_8h_source.html  _project_path_finder_8cpp.html  _project_path_finder_8cpp__incl.dot  _project_path_finder_8h.html  _project_path_finder_8h__dep__incl.dot  _project_path_finder_8h__incl.dot  _project_path_finder_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_c_text_to_c_p_p-members.html  class_c_text_to_c_p_p.html  class_project_path_finder-members.html  class_project_path_finder.html  classes.html  dir_000001_000000.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.dot  navtreedata.js  navtreeindex0.js
doc/doc_website/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  files_0.js  functions_0.js  functions_2.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
doc/doxygen-awesome-css/doxygen-custom/: header.html
include/: CTextToCPP.h  CTextToEscSeq.h  CTextToHexSeq.h  CTextToOctSeq.h  CTextToRawHexSeq.h  CodeGenerator.h  ConsoleColors.h  Extractor.h  Helperfunctions.h  Logger.h  Parameter.h  ProjectPathFinder.h
lib/: CTextToCPP.cpp  CTextToEscSeq.cpp  CTextToHexSeq.cpp  CTextToOctSeq.cpp  CTextToRawHexSeq.cpp  CodeGenerator.cpp  ConsoleColors.cpp  Extractor.cpp  Helperfunctions.cpp  Logger.cpp  Parameter.cpp  ProjectPathFinder.cpp  main copy.cpp  main.bat  main.cpp  mini.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_9.js  variables_a.js
src/: GenTxtSrcCode.cpp  GenTxtSrcCode.h  main.cpp
tests/: TEST.cpp  TESTCTextToEscSeq.cpp  TESTConsoleColors.cpp  TESTExtractor.cpp  TESTGenTxtSrcCode.cpp  TESTHelperfunctions.cpp  TESTParameter.cpp  TESTProjectPathFinder.cpp  creation_example.bat
